# LiveShell

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  ruleset-main.json
.github/workflows/: platform-validation.yml
docs/: PROTOCOL.md  RELEASE.md
examples/: async_process_smoke.py  powershell_smoke.py  process_smoke.py
scripts/: diagnose.py  setup_venv.py
src/liveshell/: __init__.py  bash.py  capabilities.py  cli.py  client.py  cmd.py  daemon.py  handles.py  models.py  powershell.py  process.py  runtime.py  store.py  utils.py
tests/: test_capabilities.py  test_cli.py  test_client.py  test_daemon.py  test_handles.py  test_models.py  test_persistent_daemon.py  test_powershell_discovery.py  test_process_sessions.py  test_production_readiness.py  test_store.py
