[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liveshell"
version = "0.1.0"
description = "Persistent command runtime sessions for Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pythonnet>=3.0",
]

[project.scripts]
liveshell = "liveshell.cli:main"

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
